# async_parse_wiki_text

./: Cargo.toml  LICENSE  readme.md  report.html
data/: centrosome.txt  example.txt
examples/test/: main.rs  test.rs
src/: bold_italic.rs  character_entity.rs  comment.rs  configuration.rs  default.rs  external_link.rs  heading.rs  lib.rs  line.rs  link.rs  list.rs  magic_word.rs  parse.rs  positioned.rs  redirect.rs  state.rs  table.rs  tag.rs  template.rs  text.rs  trie.rs
