[package]
authors = ["Fredrik Portström <https://portstrom.com>"]
description = "Parse wiki text from Mediawiki into a tree of elements"
license-file = "LICENSE"
name = "async_parse_wiki_text"
readme = "readme.md"
repository = "https://github.com/portstrom/parse_wiki_text"
version = "0.1.2"
edition = "2021"

[dependencies]
async-recursion = "1.0.4"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "macros"] }
