[package]
name = "async_parse_wiki_text"
authors = ["Romeo Disca <romeo.disca@gmail.com>", "Fredrik Portström <https://portstrom.com>"]
description = "Parse wiki text from Mediawiki into a tree of elements"
license-file = "LICENSE"
readme = "readme.md"
repository = "https://github.com/portstrom/parse_wiki_text"
version = "0.2.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.4"
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
